--- a/Project_UI/MainWindow.xaml
+++ b/Project_UI/MainWindow.xaml
@@ -267,97 +267,6 @@
                             </StackPanel>
 
                             <StackPanel
-                                Name="FilterPrintingType"
-                                Style="{StaticResource FilterItem}">
-
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition/>
-                                        <ColumnDefinition Width="Auto"/>
-                                    </Grid.ColumnDefinitions>
-
-                                    <TextBlock
-                                        x:Name="FilterPrintingTypeText"
-                                        Grid.Column="0"
-                                        TextTrimming="CharacterEllipsis"
-                                        Text="Способ печати: Любой"
-                                        FontSize="15"
-                                        FontWeight="Medium"/>
-
-                                    <Button
-                                        x:Name="FilterPrintingTypeButton"
-                                        Grid.Column="1"
-                                        Click="FilterPrintingTypeButton_Click"
-                                        ToolTip="Показать типы"
-                                        Style="{StaticResource FilterButton}">
-                                        <Button.Content>
-                                            <Path
-                                                x:Name="FilterPrintingTypeButtonIcon"
-                                                Data="{StaticResource AngleDown}"
-                                                Fill="Gray"
-                                                Height="13"
-                                                Width="13"
-                                                Stretch="Uniform"/>
-                                        </Button.Content>
-                                    </Button>
-                                </Grid>
-
-                                <ListBox
-                                    x:Name="FilterPrintingTypeListBox"
-                                    Style="{StaticResource FilterListBox}">
-                                    <ListBox.ItemContainerStyle>
-                                        <Style TargetType="ListBoxItem" BasedOn="{StaticResource FilterListBoxItem}">
-                                            <EventSetter Event="PreviewMouseLeftButtonDown" Handler="ListBoxItem_PreviewMouseLeftButtonDown"/>
-                                        </Style>
-                                    </ListBox.ItemContainerStyle>
-
-                                    <ListBox.ItemTemplate>
-                                        <DataTemplate>
-                                            <TextBlock Text="{Binding Name}"/>
-                                        </DataTemplate>
-                                    </ListBox.ItemTemplate>
-                                </ListBox>
-                            </StackPanel>
-
-                            <StackPanel
-                                x:Name="FilterPrintingWidth"
-                                Background="#f5f5f5"
-                                Style="{StaticResource FilterItem}">
-
-                                <TextBlock
-                                    Text="Ширина печати:"
-                                    FontSize="15"
-                                    FontWeight="Medium"/>
-
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="0,5*"/>
-                                        <ColumnDefinition Width="0,5*"/>
-                                    </Grid.ColumnDefinitions>
-
-                                    <TextBlock
-                                        Grid.Column="0"
-                                        Text="От:"
-                                        Style="{StaticResource FilterNumericText}"/>
-
-                                    <TextBox
-                                        Grid.Column="0"
-                                        x:Name="FilterPrintingWidthFrom"
-                                        Style="{StaticResource FilterNumericTextBox}"/>
-
-                                    <TextBlock
-                                        Grid.Column="1"
-                                        Text="до:"
-                                        Style="{StaticResource FilterNumericText}"/>
-
-                                    <TextBox
-                                        Grid.Column="1"
-                                        x:Name="FilterPrintingWidthTo"
-                                        Style="{StaticResource FilterNumericTextBox}"/>
-                                </Grid>
-                            </StackPanel>
-
-                            <StackPanel
                                 x:Name="FilterManufacturer"
                                 Style="{StaticResource FilterItem}">
 
@@ -395,6 +304,59 @@
 
                                 <ListBox
                                     x:Name="FilterManufacturerListBox"
+                                    Style="{StaticResource FilterListBox}">
+                                    <ListBox.ItemContainerStyle>
+                                        <Style TargetType="ListBoxItem" BasedOn="{StaticResource FilterListBoxItem}">
+                                            <EventSetter Event="PreviewMouseLeftButtonDown" Handler="ListBoxItem_PreviewMouseLeftButtonDown"/>
+                                        </Style>
+                                    </ListBox.ItemContainerStyle>
+
+                                    <ListBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding Name}"/>
+                                        </DataTemplate>
+                                    </ListBox.ItemTemplate>
+                                </ListBox>
+                            </StackPanel>
+
+                            <StackPanel
+                                Name="FilterPrintingType"
+                                Style="{StaticResource FilterItem}">
+
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition/>
+                                        <ColumnDefinition Width="Auto"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <TextBlock
+                                        x:Name="FilterPrintingTypeText"
+                                        Grid.Column="0"
+                                        TextTrimming="CharacterEllipsis"
+                                        Text="Способ печати: Любой"
+                                        FontSize="15"
+                                        FontWeight="Medium"/>
+
+                                    <Button
+                                        x:Name="FilterPrintingTypeButton"
+                                        Grid.Column="1"
+                                        Click="FilterPrintingTypeButton_Click"
+                                        ToolTip="Показать типы"
+                                        Style="{StaticResource FilterButton}">
+                                        <Button.Content>
+                                            <Path
+                                                x:Name="FilterPrintingTypeButtonIcon"
+                                                Data="{StaticResource AngleDown}"
+                                                Fill="Gray"
+                                                Height="13"
+                                                Width="13"
+                                                Stretch="Uniform"/>
+                                        </Button.Content>
+                                    </Button>
+                                </Grid>
+
+                                <ListBox
+                                    x:Name="FilterPrintingTypeListBox"
                                     Style="{StaticResource FilterListBox}">
                                     <ListBox.ItemContainerStyle>
                                         <Style TargetType="ListBoxItem" BasedOn="{StaticResource FilterListBoxItem}">
@@ -461,6 +423,44 @@
                                         </DataTemplate>
                                     </ListBox.ItemTemplate>
                                 </ListBox>
+                            </StackPanel>
+
+                            <StackPanel
+                                x:Name="FilterPrintingWidth"
+                                Background="#f5f5f5"
+                                Style="{StaticResource FilterItem}">
+
+                                <TextBlock
+                                    Text="Ширина печати:"
+                                    FontSize="15"
+                                    FontWeight="Medium"/>
+
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="0,5*"/>
+                                        <ColumnDefinition Width="0,5*"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <TextBlock
+                                        Grid.Column="0"
+                                        Text="От:"
+                                        Style="{StaticResource FilterNumericText}"/>
+
+                                    <TextBox
+                                        Grid.Column="0"
+                                        x:Name="FilterPrintingWidthFrom"
+                                        Style="{StaticResource FilterNumericTextBox}"/>
+
+                                    <TextBlock
+                                        Grid.Column="1"
+                                        Text="до:"
+                                        Style="{StaticResource FilterNumericText}"/>
+
+                                    <TextBox
+                                        Grid.Column="1"
+                                        x:Name="FilterPrintingWidthTo"
+                                        Style="{StaticResource FilterNumericTextBox}"/>
+                                </Grid>
                             </StackPanel>
 
                             <StackPanel
@@ -629,7 +629,31 @@
                     x:Name="ContentField"
                     Grid.Column="1"
                     Style="{StaticResource ContentField}">
-                    
+
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+
+                        <TextBlock
+                            Grid.Row="0"
+                            Text="Результаты поиска:"
+                            FontSize="13"
+                            FontWeight="Bold"
+                            Foreground="Black"
+                            Padding="6,3"/>
+
+                        <ListBox
+                            x:Name="ProductListBox"
+                            Grid.Row="1"
+                            BorderThickness="0"
+                            ItemTemplate="{StaticResource PlotterItem}"
+                            ItemsPanel="{StaticResource ContentPanel}"
+                            ScrollViewer.CanContentScroll="False"
+                            Background="Transparent"/>
+                    </Grid>
+
                 </Border>
                 
             </Grid>
