--- a/Project_UI/Resources/Styles.xaml
+++ b/Project_UI/Resources/Styles.xaml
@@ -100,6 +100,7 @@
     <Style x:Key="FilterButton" TargetType="Button">
         <Setter Property="Height" Value="20"/>
         <Setter Property="Width" Value="20"/>
+        <Setter Property="Cursor" Value="Hand"/>
     </Style>
 
     <Style x:Key="FilterListBox" TargetType="ListBox">
@@ -111,6 +112,7 @@
     </Style>
 
     <Style x:Key="FilterListBoxItem" TargetType="ListBoxItem">
+        <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="Padding" Value="5"/>
         <Setter Property="Margin" Value="0,1,0,1"/>
         <Setter Property="Background" Value="Transparent"/>
@@ -154,22 +156,87 @@
         
     </Style>
 
+    <Style x:Key="PlotterItemStyle" TargetType="ListBoxItem">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ListBoxItem">
+                    <ContentPresenter/>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
+    <Style x:Key="FlatButtonStyle" TargetType="Button">
+        <Setter Property="Cursor" Value="Hand"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <ContentPresenter/>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Padding" Value="0"/>
+        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+        <Setter Property="VerticalContentAlignment" Value="Stretch"/>
+    </Style>
+
     <DataTemplate x:Key="PlotterItem">
-        <Border BorderBrush="LightGray" BorderThickness="1" CornerRadius="5" Margin="5"
-            Width="200" Height="250">
-            <StackPanel>
-                <Image Source="{Binding ImageUrl}" Width="180" Height="150" Margin="5"/>
-                <TextBlock Text="{Binding Name}" FontWeight="Bold" Margin="5,0,5,0" TextWrapping="Wrap"/>
-                <TextBlock Text="{Binding Price, StringFormat='Цена: {0:C}'}" Margin="5,0,5,5" HorizontalAlignment="Right"/>
-                <Button Content="В корзину" Margin="5" HorizontalAlignment="Stretch"/>
-            </StackPanel>
-        </Border>
+        <Button Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}, Path=DataContext.SelectPlotterCommand}"
+            CommandParameter="{Binding}"
+            Style="{StaticResource FlatButtonStyle}">
+            <Border BorderBrush="LightGray"
+                    BorderThickness="1"
+                    CornerRadius="5"
+                    Margin="4"
+                    Width="340"
+                    Height="125">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Border>
+                        <Image Source="{Binding PathToImage}"
+                               Width="120"
+                               Height="120"
+                               Stretch="Uniform"
+                               Margin="5,0,0,0"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"/>
+                    </Border>
+
+                    <StackPanel Grid.Column="1">
+                        <TextBlock Text="{Binding Model}"
+                                   FontWeight="Bold" FontSize="20"
+                                   Margin="10,0,10,5"
+                                   TextTrimming="CharacterEllipsis"
+                                   TextWrapping="Wrap"
+                                   TextAlignment="Left"/>
+
+                        <TextBlock Text="{Binding Manufacturer}" 
+                                   FontSize="12"
+                                   Margin="10,0,10,5"
+                                   TextWrapping="Wrap"
+                                   TextAlignment="Center"
+                                   Foreground="Gray"/>
+
+                        <TextBlock Text="{Binding Price, StringFormat='Цена: {0:C}'}"
+                                   FontSize="14" FontWeight="SemiBold"
+                                   Margin="10,5,10,5"
+                                   HorizontalAlignment="Right"/>
+                    </StackPanel>
+                </Grid>
+
+            </Border>
+        </Button>
     </DataTemplate>
 
     <ItemsPanelTemplate x:Key="ContentPanel">
         <WrapPanel IsItemsHost="True"
-               Orientation="Horizontal"
-               HorizontalAlignment="Center"/>
+                   Orientation="Horizontal"
+                   HorizontalAlignment="Left"/>
     </ItemsPanelTemplate>
 
     <Style x:Key="BottomPanel" TargetType="Border" BasedOn="{StaticResource TopPannel}">
