--- a/Project_UI/Resources/Styles.xaml
+++ b/Project_UI/Resources/Styles.xaml
@@ -1,5 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:local="clr-namespace:Project_UI">
+
+    <local:EnumDescriptionConverter x:Key="EnumDescriptionConverter"/>
 
     <Style x:Key="TopPannel" TargetType="Border">
         <Setter Property="Background" Value="Gray"/>
@@ -232,10 +235,10 @@
 
                         <StackPanel Grid.Column="1">
 
-                            <TextBlock Text="{Binding Manufacturer, StringFormat='Производитель: {0}'}" 
+                            <TextBlock Text="{Binding Manufacturer, Converter={StaticResource EnumDescriptionConverter}, StringFormat='Производитель: {0}'}" 
                                        Style="{StaticResource PlotterItemInfo}"/>
 
-                            <TextBlock Text="{Binding PlotterType, StringFormat='Тип плоттера: {0}'}" 
+                            <TextBlock Text="{Binding PlotterType, Converter={StaticResource EnumDescriptionConverter}, StringFormat='Тип плоттера: {0}'}" 
                                        Style="{StaticResource PlotterItemInfo}"/>
 
                             <TextBlock Text="Нажмите, чтобы узнать больше..."
